--- a/AppJuegoAdmin/AppJuegoAdmin.csproj
+++ b/AppJuegoAdmin/AppJuegoAdmin.csproj
@@ -48,6 +48,9 @@
     <EmbeddedResource Update="Views\AgregarRetos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\EditarReto.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Index.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
