--- a/AppJuegoAdmin/AppJuegoAdmin.csproj
+++ b/AppJuegoAdmin/AppJuegoAdmin.csproj
@@ -42,6 +42,9 @@
     <EmbeddedResource Update="Helpers\PickerEstado.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Helpers\PickerNivel.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Helpers\PickerSubCategoria.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
